@@ -1,0 +1,5 @@
+#tb 0: 1/15
+0,          0,          0,        1,   691200, 0xfdbdfad6
+0,          1,          1,        1,   691200, 0xc5feb961
+0,          4,          4,        1,   691200, 0x4c8c7e23
+0,          8,          8,        1,   691200, 0xd95c89f8
