@@ -43,6 +43,7 @@ version <next>:
 - Intel QSV-accelerated MPEG-2 video and HEVC decoding
 - Support DNx100 (1440x1080@8)
 - DXV decoding
+- Screenpresso SPV1 decoding
 
 
 version 11:
